[gd_scene load_steps=40 format=3 uid="uid://cht4tocu3jflk"]

[ext_resource type="Texture2D" uid="uid://k0l2kqnlna5h" path="res://images/Player/Owlet_Monster_Attack1_4.png" id="1_5fg07"]
[ext_resource type="Script" path="res://Script/Player/Player.gd" id="1_hu6ed"]
[ext_resource type="Texture2D" uid="uid://p17ow1dao8fk" path="res://images/Player/Owlet_Monster_Throw_4.png" id="2_h0u7g"]
[ext_resource type="Texture2D" uid="uid://b5hd6cxtxwsg6" path="res://images/Player/Owlet_Monster_Death_8.png" id="3_g5bgr"]
[ext_resource type="Texture2D" uid="uid://7i3w0j7xr1v1" path="res://images/Player/Owlet_Monster_Idle_4.png" id="4_i7yj6"]
[ext_resource type="Texture2D" uid="uid://dmou33bakl2k7" path="res://images/Player/Owlet_Monster_Walk_6.png" id="5_sycbh"]
[ext_resource type="Script" path="res://Script/Player/EST/EST.gd" id="6_nwvvs"]
[ext_resource type="Script" path="res://Script/Player/EST/Idle.gd" id="7_g4cni"]
[ext_resource type="Script" path="res://Script/Player/EST/Walk.gd" id="8_ic85c"]
[ext_resource type="Script" path="res://Script/Player/EST/AttackRanged.gd" id="10_dfhu8"]
[ext_resource type="AudioStream" uid="uid://b4eif2o3cms0o" path="res://SFX/attack3.wav" id="11_er4gn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fcae7"]
atlas = ExtResource("1_5fg07")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8ee6"]
atlas = ExtResource("1_5fg07")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yetbc"]
atlas = ExtResource("1_5fg07")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibno0"]
atlas = ExtResource("1_5fg07")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w08d"]
atlas = ExtResource("2_h0u7g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttdt6"]
atlas = ExtResource("2_h0u7g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt86t"]
atlas = ExtResource("2_h0u7g")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_slhcd"]
atlas = ExtResource("2_h0u7g")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx3tt"]
atlas = ExtResource("3_g5bgr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utuah"]
atlas = ExtResource("3_g5bgr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs84l"]
atlas = ExtResource("3_g5bgr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1tla"]
atlas = ExtResource("3_g5bgr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk2pr"]
atlas = ExtResource("3_g5bgr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8u3f"]
atlas = ExtResource("3_g5bgr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ksc5"]
atlas = ExtResource("3_g5bgr")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t83d0"]
atlas = ExtResource("3_g5bgr")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdcwc"]
atlas = ExtResource("4_i7yj6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61unn"]
atlas = ExtResource("4_i7yj6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv3ac"]
atlas = ExtResource("4_i7yj6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3fsd"]
atlas = ExtResource("4_i7yj6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y1gf"]
atlas = ExtResource("5_sycbh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vejv2"]
atlas = ExtResource("5_sycbh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsr1v"]
atlas = ExtResource("5_sycbh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mpd6"]
atlas = ExtResource("5_sycbh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53qq4"]
atlas = ExtResource("5_sycbh")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfkr6"]
atlas = ExtResource("5_sycbh")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wefhy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcae7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8ee6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yetbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibno0")
}],
"loop": true,
"name": &"AttackMelee",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w08d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttdt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt86t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slhcd")
}],
"loop": true,
"name": &"AttackRanged",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx3tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utuah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs84l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1tla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk2pr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8u3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ksc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t83d0")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdcwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61unn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv3ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3fsd")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y1gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vejv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsr1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mpd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53qq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfkr6")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eq6rm"]
radius = 9.0
height = 26.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("brain", "animation")]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_hu6ed")
BaseSpeed = 100
BaseAcceleration = 30
BaseFriction = 10
brain = NodePath("EST")
animation = NodePath("Player_animatedSprite")

[node name="Player_animatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wefhy")
animation = &"Idle"
autoplay = "Idle"

[node name="Player_collistionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("CapsuleShape2D_eq6rm")

[node name="EST" type="Node" parent="."]
script = ExtResource("6_nwvvs")

[node name="Idle" type="Node" parent="EST"]
script = ExtResource("7_g4cni")

[node name="Walk" type="Node" parent="EST"]
script = ExtResource("8_ic85c")

[node name="AttackRanged" type="Node" parent="EST"]
script = ExtResource("10_dfhu8")

[node name="AttackTimer" type="Timer" parent="EST/AttackRanged"]
process_callback = 0
one_shot = true

[node name="AttackSFX" type="AudioStreamPlayer" parent="EST/AttackRanged"]
stream = ExtResource("11_er4gn")
